feat: implement full-text search indexing and add supporting UI components and utilities